--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Build the Docker image
       run: |
       cd project2/apps/vulnerability-report
-      docker build . --tag ${{ secrets.ECR_REPO_NAME }}:${{ github.sha }}
+      docker build . --file project2/apps/vulnerability-report/Dockerfile --tag ${{ secrets.ECR_REPO_NAME }}:${{ github.sha }}
     - name: Push to ECR (SHA)
       id: ecr-sha
       uses: rewardinsight/gh-ecr-push@master
