--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: |
-      cd project2/apps/vulnerability-report
-      docker build . --file project2/apps/vulnerability-report/Dockerfile --tag ${{ secrets.ECR_REPO_NAME }}:${{ github.sha }}
+      run: docker build ./project2/apps/vulnerability-report/ --file ./project2/apps/vulnerability-report/Dockerfile --tag ${{ secrets.ECR_REPO_NAME }}:${{ github.sha }}
     - name: Push to ECR (SHA)
       id: ecr-sha
       uses: rewardinsight/gh-ecr-push@master
