--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       with:
          access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
          secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-         region: eu-west-1
+         region: us-east-1
          image: ${{ secrets.ECR_REPO_NAME }}:${{ github.sha }}
     - name: Push to ECR (Latest)
       id: ecr-latest
