--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,9 +33,7 @@ jobs:
     - name: Build the Docker image
       env:
         TAG_VERSION: ${{ steps.bump_version.outputs.new_tag }}
-      run: |
-      cd project2/apps/vulnerability-report
-      docker build ./project2/apps/vulnerability-report/ --file ./project2/apps/vulnerability-report/Dockerfile --tag ${{ secrets.ECR_REPO_NAME }}:v$( echo ${TAG_VERSION} | cut -c2- ) --tag ${{ secrets.ECR_REPO_NAME }}:latest
+      run: docker build ./project2/apps/vulnerability-report/ --file ./project2/apps/vulnerability-report/Dockerfile --tag ${{ secrets.ECR_REPO_NAME }}:v$( echo ${TAG_VERSION} | cut -c2- ) --tag ${{ secrets.ECR_REPO_NAME }}:latest
     - name: Push to ECR
       env:
         TAG_VERSION: ${{ steps.bump_version.outputs.new_tag }}
