--- a/project1/infrastructure/infrastructure.yml
+++ b/project1/infrastructure/infrastructure.yml
@@ -32,6 +32,11 @@ Parameters:
     Description: CIDR for subnet
     Type: String
     Default: 10.10.3.0/24
+    
+  PrivateSubnet2CidrBlock: 
+    Description: CIDR for subnet2
+    Type: String
+    Default: 10.10.4.0/24
 
   AvailabilityZone1: 
     Description: Availability Zone 1
@@ -106,6 +111,18 @@ Resources:
           Value: Private
         - Key: Name
           Value: private-1
+          
+  PrivateSubnet2: 
+    Type: AWS::EC2::Subnet
+    Properties: 
+      VpcId: !Ref VPC
+      AvailabilityZone: !Ref AvailabilityZone2
+      CidrBlock: !Ref PrivateSubnet2CidrBlock
+      Tags: 
+        - Key: Network
+          Value: Private
+        - Key: Name
+          Value: private-2
 
   InternetGateway: 
     Type: AWS::EC2::InternetGateway
@@ -169,6 +186,13 @@ Resources:
     Properties: 
       SubnetId: !Ref PrivateSubnet1
       RouteTableId: !Ref PrivateRouteTable
+      
+  PrivateSubnet2RouteTableAssociation: 
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties: 
+      SubnetId: !Ref PrivateSubnet2
+      RouteTableId: !Ref PrivateRouteTable
+
 
   PublicSubnet1RouteTableAssociation: 
     Type: AWS::EC2::SubnetRouteTableAssociation
@@ -226,6 +250,12 @@ Resources:
     Type: AWS::EC2::SubnetNetworkAclAssociation
     Properties: 
       SubnetId: !Ref PrivateSubnet1
+      NetworkAclId: !Ref NetworkAcl
+      
+  PrivateSubnet2NetworkAclAssociation: 
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties: 
+      SubnetId: !Ref PrivateSubnet2
       NetworkAclId: !Ref NetworkAcl
 
   LoadBalancerSecurityGroup:
@@ -335,6 +365,7 @@ Resources:
             - !Ref ContainerSecurityGroup
           Subnets:
             - !Ref PrivateSubnet1
+            - !Ref PrivateSubnet2
       TaskDefinition: !Ref TaskDefinition
 
 
@@ -379,10 +410,10 @@ Resources:
           Version: '2012-10-17'
           Statement:
           - Action:
-            - s3:*
+            - s3:PutObject
             Effect: Allow
             Resource:
-            - "*"
+            - "arn:aws:s3:::flaskdemobucket"
         PolicyName: s3Permissions
     Type: AWS::IAM::Role
 
